src/test/deca/context/valid/class_decl/field_public_otherclass.deca
// Description:
//    Déclaration d'une classe avec un attribut String
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class Test {
	String a;
}

class MaClasse {
	Test a;

	Test myFunc(Test b) {

	}
}

{

}
