src/test/deca/context/invalid/class/class_decl/String.deca
// Description:
//    Déclaration d'une classe String
//
// Resultats:
//    Double définition of String
// 
// Historique:
//    cree le 01/01/2016

class String {

}

{

}
